<resources>
    <string name="app_name">Intent4</string>
    <string name="text1">Surxondaryo viloyati IIBga yangi boshliq tayinlandi</string>
    <string name="text2">“Tashabbusli budjet”da “bir fuqaro – bir ovoz” tizimi joriy etiladi1</string>
    <string name="text3">Telegramda zararli virus dasturlar tarqatib kelgan 18 yoshli yigit ushlandi</string>
    <string name="text4">Qashqadaryoning tog‘li qishlog‘ida qariyb 1 metr qor yog‘di</string>
    <string name="text5">Shahar piyodalar uchun bo‘lishi kerak - Shavkat Mirziyoyev</string>
</resources>