<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="2019-04-12 | 10:31"

                    android:layout_weight="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:background="@drawable/img_fon"
                android:src="@drawable/img"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="2019-04-12 | 10:31"

                    android:layout_weight="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:background="@drawable/img_fon"
                android:src="@drawable/img_1"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="2019-04-12 | 10:31"

                    android:layout_weight="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:background="@drawable/img_fon"
                android:src="@drawable/img_2"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="2019-04-12 | 10:31"

                    android:layout_weight="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:background="@drawable/img_fon"
                android:src="@drawable/img_3"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text5"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="2019-04-12 | 10:31"

                    android:layout_weight="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:background="@drawable/img_fon"
                android:src="@drawable/img_4"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>